# eolify-py

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
python/eolify/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_normalize_file.py  test_normalize_stream.py
