[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "eolify"
version = "0.1.5"
description = "High-performance line ending normalization for Python."
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.maturin]
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
